--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Iogsotot/virtual-keyboard#readme",
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.12.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1"
